--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 
         <h2>Example Usage:</h2>
         <p>
-          <a href="api/whoami">[base url]/api/whoami</a>
+          <a href="api/whoami">https://3001-rsmkcode-boilerplatepro-j2x2y3w15ko.ws-us115.gitpod.io/api/whoami</a>
         </p>
 
         <h2>Example Output:</h2>
